--- a/index.html
+++ b/index.html
@@ -3,68 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Real Estate Services | Build & Invest</title>
+  <title>Real Estate | Build & Invest</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <!-- Toggle Switch Top Bar -->
+  <div class="top-toggle">
+    <button data-tab="build" class="tab-btn active">🏗 Build</button>
+    <button data-tab="invest" class="tab-btn">💼 Invest</button>
+    <div class="toggle-indicator"></div>
+  </div>
+
   <header class="hero">
     <h1>Dream Home? We Build It.</h1>
-    <p>Custom homes, seamless process, crystal-clear pricing</p>
-
-    <div class="tab-switcher">
-      <button data-tab="build" class="tab-btn active">Build With Us 🏗️</button>
-      <button data-tab="invest" class="tab-btn">Invest With Us 💼</button>
-    </div>
+    <p>Custom homes, seamless process, and investment opportunities.</p>
   </header>
 
   <main>
     <!-- BUILD SECTION -->
     <section id="build" class="screen active">
-      <h2>Your Custom Build Journey</h2>
-      <p>We handle everything from lot selection to architectural plans, permitting, and final delivery.</p>
-
-      <div class="process-step">
-        <h3>1. Dream & Plan</h3>
-        <p>Financing consultation, design meetings, architectural blueprints and budgeting.</p>
-      </div>
-      <div class="process-step">
-        <h3>2. Lot & Permits</h3>
-        <p>We help you find a lot or build on your own — and handle all legal permits and surveys.</p>
-      </div>
-      <div class="process-step">
-        <h3>3. Build & Finish</h3>
-        <p>Professional contractors bring your custom design to life with premium materials.</p>
-      </div>
-      <div class="process-step">
-        <h3>4. Move In</h3>
-        <p>You take the keys. We deliver a beautiful home on-time and on-budget.</p>
-      </div>
-
-      <a href="#" class="btn">Get Started</a>
+      <h2>Build With Us</h2>
+      <p>We manage your project from design to handover.</p>
     </section>
 
     <!-- INVEST SECTION -->
     <section id="invest" class="screen">
       <h2>Invest With Us</h2>
-      <p>Partner with us on real estate development. We offer transparent returns and full project visibility.</p>
-
-      <div class="process-step">
-        <h3>Why Invest?</h3>
-        <p>We manage land acquisition, construction, marketing, and sales. You earn returns with minimal risk.</p>
-      </div>
-
-      <div class="process-step">
-        <h3>Transparent Financials</h3>
-        <p>We share project costs, timelines, ROI targets, and regular updates with all investors.</p>
-      </div>
-
-      <a href="#" class="btn">Contact Our Investment Team</a>
+      <p>Partner in profitable, well-managed developments.</p>
     </section>
   </main>
 
   <footer>
-    <p>© 2025 Your Real Estate Company | info@yourdomain.com</p>
+    <p>© 2025 Real Estate Company</p>
   </footer>
+
+  <script src="main.js"></script>
+</body>
+</html>
+
 
   <script src="main.js"></script>
 </body>
