--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 </head>
 <body>
 
-  <header>
-    <div class="mode-toggle">
-      <button id="switch-to-invest">Investing</button>
-      <button id="switch-to-build">Build With Us</button>
-    </div>
-  </header>
+<header>
+  <div class="mode-toggle toggle-centered">
+    <span id="mode-label">Invest With Us</span>
+    <label class="switch">
+      <input type="checkbox" id="mode-toggle" />
+      <span class="slider"></span>
+    </label>
+    <span id="mode-label-right">Build With Us & For You</span>
+  </div>
+</header>
+
 
   <!-- INVESTING SITE -->
   <div id="site-invest" class="site active">
