--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
 <body>
 
 <header>
-  <div class="mode-toggle toggle-centered">
-    <span id="mode-label">Invest With Us</span>
-    <label class="switch">
-      <input type="checkbox" id="mode-toggle" />
-      <span class="slider"></span>
-    </label>
-    <span id="mode-label-right">Build With Us & For You</span>
+  <div class="mode-toggle text-toggle">
+    <span class="mode-option active" id="invest-toggle">Invest With Us</span>
+    <span class="divider">|</span>
+    <span class="mode-option" id="build-toggle">Build With Us & For You</span>
   </div>
 </header>
+
 
 
   <!-- INVESTING SITE -->
