--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <header>
   <div class="mode-toggle text-toggle">
-    <span class="mode-option active" id="invest-toggle">Invest With Us</span>
+    <span class="mode-option active" id="invest-toggle">INVEST WITH US</span>
     <span class="divider">|</span>
-    <span class="mode-option" id="build-toggle">Build With Us & For You</span>
+    <span class="mode-option" id="build-toggle">BUILD WITH US</span>
   </div>
 </header>
 
