--- a/index.html
+++ b/index.html
@@ -55,4 +55,10 @@
     </nav>
     <main>
       <section id="build-home" class="page active">
+  <div class="hero-bg"></div>
+  <div class="hero-content">
+    <h1>Welcome Homeowners</h1>
+    <p>Build innovative and sustainable developments with us.</p>
+  </div>
+</section>
 
