--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
       <section id="build-home" class="page active">
   <div class="hero-bg"></div>
   <div class="hero-content">
-    <h1>Welcome Homeowners</h1>
-    <p>Build innovative and sustainable developments with us.</p>
+   <h1 class="hero-heading">
+  <span class="line">
+    <span class="black">BUILD</span> <span class="gray">BOLD</span>
+  </span>
+  <span class="line indent">
+    <span class="black">LIVE</span> <span class="gray">GRAND</span>
+  </span>
+</h1>
+
   </div>
 </section>
 
