--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     <main>
       <section id="build-home" class="page active">
   <div class="hero-bg"></div>
-  <div class="hero-content">
-   <h1 class="hero-heading">
-  <span class="line">
-    <span class="black">BUILD</span> <span class="gray">BOLD</span>
-  </span>
-  <span class="line indent">
-    <span class="black">LIVE</span> <span class="gray">GRAND</span>
-  </span>
-</h1>
+  <div class="hero-content left-aligned">
+  <h1 class="hero-heading">
+    <span class="line">
+      <span class="black">BUILD</span> <span class="gray">BOLD</span>
+    </span>
+    <span class="line indent">
+      <span class="black">LIVE</span> <span class="gray">GRAND</span>
+    </span>
+  </h1>
+</div>
 
-  </div>
 </section>
 
