--- a/index.html
+++ b/index.html
@@ -11,61 +11,63 @@
 <body>
 
 <header>
-  <div class="mode-toggle text-toggle">
+  <div class="mode-toggle text-toggle" id="mode-toggle">
     <span class="mode-option active" id="invest-toggle">INVEST WITH US</span>
     <span class="divider">|</span>
     <span class="mode-option" id="build-toggle">BUILD WITH US</span>
   </div>
 </header>
 
-
-
-  <!-- INVESTING SITE -->
-  <div id="site-invest" class="site active">
-    <nav class="navbar">
-      <a href="#invest-home" class="nav-link" data-target="invest-home">Home</a>
-      <a href="#invest-opps" class="nav-link" data-target="invest-opps">Opportunities</a>
-      <a href="#invest-contact" class="nav-link" data-target="invest-contact">Contact</a>
-    </nav>
-    <main>
-      <section id="invest-home" class="page active">
-        <h1>Welcome Investors</h1>
-        <p>Explore real estate opportunities with strong ROI.</p>
-      </section>
-      <section id="invest-opps" class="page">
-        <h2>Our Investment Portfolio</h2>
-        <p>Handpicked, high-yield assets across cities.</p>
-      </section>
-      <section id="invest-contact" class="page">
-        <h2>Investor Relations</h2>
-        <form>
-          <input type="email" placeholder="Email" />
-          <button>Contact Us</button>
-        </form>
-      </section>
-    </main>
-  </div>
-
-  <!-- BUILD WITH US SITE -->
-  <div id="site-build" class="site">
-    <nav class="navbar">
-      <a href="#build-home" class="nav-link" data-target="build-home">Home</a>
-      <a href="#build-projects" class="nav-link" data-target="build-projects">Our Projects</a>
-      <a href="#build-contact" class="nav-link" data-target="build-contact">Get in Touch</a>
-    </nav>
-    <main>
-      <section id="build-home" class="page active">
-  <div class="hero-bg"></div>
-  <div class="hero-content left-aligned">
-  <h1 class="hero-heading">
-    <span class="line">
-      <span class="black">BUILD</span> <span class="gray">BOLD</span>
-    </span>
-    <span class="line indent">
-      <span class="black">LIVE</span> <span class="gray">GRAND</span>
-    </span>
-  </h1>
+<!-- INVESTING SITE -->
+<div id="site-invest" class="site active">
+  <nav class="navbar">
+    <a href="#invest-home" class="nav-link" data-target="invest-home">Home</a>
+    <a href="#invest-opps" class="nav-link" data-target="invest-opps">Opportunities</a>
+    <a href="#invest-contact" class="nav-link" data-target="invest-contact">Contact</a>
+  </nav>
+  <main>
+    <section id="invest-home" class="page active">
+      <h1>Welcome Investors</h1>
+      <p>Explore real estate opportunities with strong ROI.</p>
+    </section>
+    <section id="invest-opps" class="page">
+      <h2>Our Investment Portfolio</h2>
+      <p>Handpicked, high-yield assets across cities.</p>
+    </section>
+    <section id="invest-contact" class="page">
+      <h2>Investor Relations</h2>
+      <form>
+        <input type="email" placeholder="Email" />
+        <button>Contact Us</button>
+      </form>
+    </section>
+  </main>
 </div>
 
-</section>
+<!-- BUILD WITH US SITE -->
+<div id="site-build" class="site">
+  <nav class="navbar">
+    <a href="#build-home" class="nav-link" data-target="build-home">Home</a>
+    <a href="#build-projects" class="nav-link" data-target="build-projects">Our Projects</a>
+    <a href="#build-contact" class="nav-link" data-target="build-contact">Get in Touch</a>
+  </nav>
+  <main>
+    <section id="build-home" class="page active">
+      <div class="hero-bg"></div>
+      <div class="hero-content left-aligned">
+        <h1 class="hero-heading">
+          <span class="line">
+            <span class="black">BUILD</span> <span class="gray">BOLD</span>
+          </span>
+          <span class="line indent">
+            <span class="black">LIVE</span> <span class="gray">GRAND</span>
+          </span>
+        </h1>
+      </div>
+    </section>
+  </main>
+</div>
+
+</body>
+</html>
 
