--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 <body>
 
 <header>
-  <div class="mode-toggle text-toggle" id="mode-toggle">
-    <span class="mode-option active" id="invest-toggle">INVEST WITH US</span>
-    <span class="divider">|</span>
-    <span class="mode-option" id="build-toggle">BUILD WITH US</span>
+  <div class="site-header">
+    <img src="logo.png" alt="Company Logo" class="logo">
+    <div class="mode-toggle text-toggle">
+      <span class="mode-option active" id="invest-toggle">INVEST WITH US</span>
+      <span class="divider">|</span>
+      <span class="mode-option" id="build-toggle">BUILD WITH US</span>
+    </div>
   </div>
 </header>
+
 
 <!-- INVESTING SITE -->
 <div id="site-invest" class="site active">
