--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
     <a href="#build-home" class="nav-link" data-target="build-home">Home</a>
     <a href="#build-projects" class="nav-link" data-target="build-projects">Our Projects</a>
     <a href="#build-contact" class="nav-link" data-target="build-contact">Get in Touch</a>
+    <div class="contact-icons">
+  <a href="https://instagram.com/grandhome_estates" target="_blank" title="Instagram">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" class="icon" alt="Instagram">
+  </a>
+  <a href="tel:9083120636" title="Call Us">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/phone.svg" class="icon" alt="Phone">
+  </a>
+  <a href="mailto:grandhomeinvestments@gmail.com" title="Email Us">
+    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" class="icon" alt="Email">
+  </a>
+</div>
+
   </nav>
   <main>
     <section id="build-home" class="page active">
