--- a/index.html
+++ b/index.html
@@ -51,22 +51,25 @@
 <!-- BUILD WITH US SITE -->
 <div id="site-build" class="site">
   <nav class="navbar">
+  <div class="contact-icons">
+    <a href="https://instagram.com/grandhome_estates" target="_blank" title="Instagram">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" class="icon" alt="Instagram">
+    </a>
+    <a href="tel:9083120636" title="Call Us">
+      📞
+    </a>
+    <a href="mailto:grandhomeinvestments@gmail.com" title="Email Us">
+      <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" class="icon" alt="Email">
+    </a>
+  </div>
+
+  <div class="nav-links">
     <a href="#build-home" class="nav-link" data-target="build-home">Home</a>
     <a href="#build-projects" class="nav-link" data-target="build-projects">Our Projects</a>
     <a href="#build-contact" class="nav-link" data-target="build-contact">Get in Touch</a>
-    <div class="contact-icons">
-  <a href="https://instagram.com/grandhome_estates" target="_blank" title="Instagram">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" class="icon" alt="Instagram">
-  </a>
-  <a href="tel:9083120636" title="Call Us">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/phone.svg" class="icon" alt="Phone">
-  </a>
-  <a href="mailto:grandhomeinvestments@gmail.com" title="Email Us">
-    <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/gmail.svg" class="icon" alt="Email">
-  </a>
-</div>
+  </div>
+</nav>
 
-  </nav>
   <main>
     <section id="build-home" class="page active">
       <div class="hero-bg"></div>
